After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743157 - gtk3-demo editable cells treeview problem
gtk3-demo editable cells treeview problem
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
3.14.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-01-19 04:32 UTC by Robert Roth
Modified: 2015-01-19 12:36 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Robert Roth 2015-01-19 04:32:20 UTC
Steps to reproduce:
1. start gtk3-demo (from terminal)
2. run the TreeView->editable cells demo
3. remove all rows
4. try to add one row

Expected:
new row is added

What happens:
treeview remains empty (and five critical warnings appear on the console if running from a terminal)