gtk-demo: Make editable cells demo more robust

When removing all rows, trying to add rows would not work
and throw criticals. This is fallout from a recent change
to insert rows at the right position. Fix this by handling
the 'empty model' case separately.

https://bugzilla.gnome.org/show_bug.cgi?id=743157