demos/gtk-demo/editable_cells.c
@@ -158,11 +158,18 @@ add_item (GtkWidget *button, gpointer data)
   /* Insert a new row below the current one */
   gtk_tree_view_get_cursor (treeview, &path, NULL);
   model = gtk_tree_view_get_model (treeview);
-  gtk_tree_model_get_iter (model, &current, path);
-  gtk_tree_path_free (path);
+  if (path)
+    {
+      gtk_tree_model_get_iter (model, &current, path);
+      gtk_tree_path_free (path);
+      gtk_list_store_insert_after (GTK_LIST_STORE (model), &iter, &current);
+    }
+  else
+    {
+      gtk_list_store_insert (GTK_LIST_STORE (model), &iter, -1);
+    }
 
   /* Set the data for the new row */
-  gtk_list_store_insert_after (GTK_LIST_STORE (model), &iter, &current);
   gtk_list_store_set (GTK_LIST_STORE (model), &iter,
                       COLUMN_ITEM_NUMBER, foo.number,
                       COLUMN_ITEM_PRODUCT, foo.product,
